chore: Convert all docs and UI strings to English, add en/ko localization via String Catalog

--- a/project.yml
+++ b/project.yml
@@ -7,6 +7,8 @@ options:
   defaultConfig: Debug
   groupSortPosition: top
   generateEmptyDirectories: true
+  developmentLanguage: en
+  knownRegions: [en, ko]
 
 settings:
   base:
